Adding popup and new code

--- a/src/app/user-service/user-service.component.html
+++ b/src/app/user-service/user-service.component.html
@@ -22,8 +22,8 @@
       <td>{{user.email}}</td>
       <td>{{user.company.name}}</td>
       <td>{{user.website}}</td>
-      <td><a [routerLink] ="['/posts', user.id]" class="btn btn-success">Posts</a></td>     
-      <td><a routerLink ="/albums" class="btn btn-primary">Albums</a></td> 
+      <td><a [routerLink] ="['/posts', user.id, user.name]" class="btn btn-success">Posts</a></td>     
+      <td><a [routerLink] ="['/albums', user.id]" class="btn btn-primary">Albums</a></td> 
     </tr>  
   </tbody>
 </table>
