--- a/src/app/post-service/post-service.component.html
+++ b/src/app/post-service/post-service.component.html
@@ -1,28 +1,63 @@
 <h1>User Posts</h1>
+<button class="btn btn-primary btn-md pull-right" data-target="#loginModal" data-toggle="modal">New Post
+  </button>
+  <div class="modal fade" tabindex="-1" id="loginModal" data-keyboard="false" data-backdrop="static">
+    <div class="modal-dialog modal-md">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">
+            &times;
+          </button>
+          <h4 class="modal-title">New Post</h4>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="inputUserName">Title</label>
+              <!-- <input #postTitle type="text" [(ngModel)]="post.title" required> -->
+              <input class="form-control" placeholder="Title" type="text" id="postTitle" />
+            </div>
+            <div class="form-group">
+              <label for="inputPassword">Message</label>
+              <input class="form-control" placeholder="Message" type="text" id="postMessage" />
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-success" (click) = "addPost()" >Done</button>
+        </div>
+      </div>
+    </div>
+  </div>
 <table class="table table-hover">
   <thead>
     <tr>
-      <th><span class="glyphicon glyphicon-user" ></span></th>      
-      <th>Post Title</th>
+      <th>
+        <span class="glyphicon glyphicon-user"></span>
+      </th>
+      <th>Posts from {{name}}</th>
       <th>Comments</th>
-      <th></th>    
+      <th></th>
     </tr>
   </thead>
-  <tbody >
-    <tr *ngFor = "let post of posts">
-      <td><span class="glyphicon glyphicon-pencil"></span></td>
+  <tbody>
+    <tr *ngFor="let post of posts">
+      <td>
+        <span class="glyphicon glyphicon-pencil"></span>
+      </td>
       <td>{{post.title}}</td>
-      <td><button type="button" class="btn btn-link" (click)="viewComments(post.id)">View Comments</button> 
+      <td>
+        <button type="button" class="btn btn-link" (click)="viewComments(post.id)">View Comments</button>
         <div>
-            <ul *ngFor="let cmnt of comments">
-                <li *ngIf="showComment && cmnt.postId == post.id" >
-                    <p>{{cmnt.body}}</p>
-                </li>
-            </ul>
-        </div>    
-    </td>
-    </tr>  
+          <ul *ngFor="let cmnt of comments">
+            <li *ngIf="showComment && cmnt.postId == post.id">
+              <p>{{cmnt.body}}</p>
+            </li>
+          </ul>
+        </div>
+      </td>
+    </tr>
   </tbody>
 </table>
-
 
